adding swagger docs
