# internal/adapter/http/handler/user_handler.go
@@ -3,11 +3,12 @@ package handler
 import (
 	"errors"
 	"fmt"
+	"net/http"
+
 	"github.com/go-playground/validator/v10"
 	"github.com/tupizz/restaurant-food-golang-api-fiap/internal/application/dto"
 	"github.com/tupizz/restaurant-food-golang-api-fiap/internal/application/service"
 	"github.com/tupizz/restaurant-food-golang-api-fiap/internal/domain/entity"
-	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
@@ -25,6 +26,15 @@ func NewUserHandler(userService service.UserService) UserHandler {
 	return &userHandler{userService: userService}
 }
 
+// GetAll godoc
+// @Summary      Obtém todos os usuários
+// @Description  Obtém todos os usuários cadastrados
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Success      200     {array}  []entity.User
+// @Failure      500     {object}  handler.ErrorResponse
+// @Router       /users [get]
 func (h *userHandler) GetAll(c *gin.Context) {
 	users, err := h.userService.GetAllUsers(c.Request.Context())
 	if err != nil {
@@ -34,6 +44,17 @@ func (h *userHandler) GetAll(c *gin.Context) {
 	c.JSON(http.StatusOK, users)
 }
 
+// Create godoc
+// @Summary      Cria um novo usuário
+// @Description  Cria um novo usuário com os dados fornecidos
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        user  body      dto.UserInput  true  "Dados do Usuário"
+// @Success      201     {object}  entity.User
+// @Failure      400     {object}  handler.ErrorResponse
+// @Failure      500     {object}  handler.ErrorResponse
+// @Router       /users [post]
 func (h *userHandler) Create(c *gin.Context) {
 	var input dto.UserInput
 	if err := c.ShouldBindJSON(&input); err != nil {
